--- a/qstiles/Triangles/AndroidManifest.xml
+++ b/qstiles/Triangles/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.bootleggers.qstile.cosmos"
+    package="com.android.systemui.qstile.triangles"
     android:versionCode="1"
     android:versionName="1.0">
     <overlay android:targetPackage="com.android.systemui" android:priority="1"/>
 
-    <application android:label="Shishu Cosmos" android:hasCode="false" />
+    <application android:label="Triangled" android:hasCode="false" />
 </manifest>
